rust_test_framework/tests/compile_tests/should_fail/duplicate_params_single.stderr
error: Duplicate test case value found
 --> tests/compile_tests/should_fail/duplicate_params_single.rs:3:18
  |
3 | #[test_params(1, 1)]
  |                  ^
